# UltraThinking-LLM-Training

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_TRAINING_GUIDE.md  ARCHITECTURE_IMPROVEMENTS_GUIDE.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASETS.md  DOCKER_GUIDE.md  DOCUMENTATION_STRUCTURE.md  Dockerfile  ENHANCEMENTS_SUMMARY.md  IMPROVEMENTS_APPLIED.md  INDEX.md  INSTALLATION_GUIDE.md  LICENSE  MODEL_CARD.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RUN_TRAINING.md  START_HERE.md  TESTING_GUIDE.md  TRAINING_DIAGRAM_INSERT.txt  TRAINING_GUIDE.md  TRAINING_HANG_FIX.md  TRAINING_QUICKSTART.md  TRAINING_SETUP_COMPLETE.md  adv.py  app_gradio.py  cmd train.md  convert_html_to_pdf.py  deepspeed_config_zero2.json  docker-compose.yml  easy_dataset.json  (+17 more)
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: deepspeed_z3.json  model_configs.yaml  pile_quick.yaml  training_configs.yaml
configs/: datasets.yaml  deepspeed_z1.json  train_large.yaml  train_medium.yaml  train_small.yaml
docs/: ARCHITECTURE_IMPROVEMENTS.md  BENCHMARKS.md  COMPARISON.md  MARKETING_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_START_PROMOTION.md  README.md  ROADMAP.md  TRAINING_QUICKSTART.md  TROUBLESHOOTING.md  accelerate.md  colab.ipynb  colab.md  colab_monitoring.md  datasets.md  development.md  evaluation.md  faq.md  getting_started.md  training_deepspeed.md  training_full.md  training_small.md
docs/images/: .gitkeep
scripts/: cleanup.py  distributed_train.py  inference.py  profile_model.py  recover_checkpoint.py
src/: __init__.py
src/data/: __init__.py  data_loading.py  datasets.py  synthetic_generation.py  validation.py
src/evaluation/: __init__.py  benchmarks.py  loaders.py
src/models/: __init__.py  architecture.py  constitutional_ai.py  dynamic_reasoning.py  moe_advanced.py  multimodal.py  ultrathink.py
src/monitoring/: __init__.py  metrics.py  system_monitor.py
src/security/: __init__.py  validator.py
src/training/: __init__.py  checkpoint.py  distributed_4d.py  loop.py  optim.py  optimizers.py  rlhf_advanced.py  scheduler.py
tests/: __init__.py  conftest.py  smoke_test.py
tests/integration/: test_forward_pass.py
tests/unit/: test_attention_mask.py  test_dre_routing.py
tests/unit/test_data/: __init__.py  test_datasets.py
tests/unit/test_models/: __init__.py  test_architecture.py  test_moe.py
tests/unit/test_training/: __init__.py  test_optimizer.py
utils/: evaluation.py  generation.py
